welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:1: error: '<-' expected but ')' found.
for (compteur -> 1 to 4) {
                       ^Runner:15: error: illegal start of simple expression
	}
        ^